Added workload formulas
Workload formulas specify the concurrency and the number of iterations
for any particular test scenario based on the configuration of open stack
being tested. The first commit contains the initial versions of this
formulas. All of them scale concurrency and number of iterations
proportionally to number of controllers. These formulas need to be revised
and fine-tuned iteratively.

Also added support for basic math functions (min, max, round, ceil)
inside jinja templates.

Change-Id: I956bc3d9ff831b098cc8be3ee55283a567360906

--- a/certification/openstack/macro/macro.yaml
+++ b/certification/openstack/macro/macro.yaml
@@ -33,9 +33,9 @@
             volumes: -1
 {%- endmacro %}
 
-{%- macro constant_runner(concurrency=1, times=1) %}
+{%- macro constant_runner(concurrency=1, times=1, is_smoke=True) %}
         type: constant
-  {%- if smoke %}
+  {%- if is_smoke %}
         concurrency: 1
         times: 1
   {%- else %}
@@ -44,9 +44,9 @@
   {%- endif %}
 {%- endmacro %}
 
-{%- macro rps_runner(rps=1, times=1) %}
+{%- macro rps_runner(rps=1, times=1, is_smoke=True) %}
         type: rps
-  {%- if smoke %}
+  {%- if is_smoke %}
         rps: 1
         times: 1
   {%- else %}
