--- a/certification/openstack/scenario/cinder.yaml
+++ b/certification/openstack/scenario/cinder.yaml
@@ -8,7 +8,7 @@
           {{ unlimited_volumes() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount),times=min(30, 10*controllers_amount), is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -23,7 +23,7 @@
         {{ volumes() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount),times=min(200, 67*controllers_amount), is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -39,7 +39,7 @@
           {{ unlimited_volumes() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount),times=min(100, 33*controllers_amount), is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
     -
@@ -51,7 +51,7 @@
           {{ unlimited_volumes() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount),times=min(100, 33*controllers_amount), is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
     -
@@ -63,7 +63,7 @@
           {{ unlimited_volumes() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount),times=min(100, 33*controllers_amount), is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -78,7 +78,7 @@
           {{ unlimited_volumes() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount),times=min(100, 33*controllers_amount), is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -94,7 +94,7 @@
         {{ volumes() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount),times=min(100, 33*controllers_amount), is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -109,7 +109,7 @@
           {{ unlimited_volumes() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount),times=min(100, 33*controllers_amount), is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
     -
@@ -122,7 +122,7 @@
           {{ unlimited_volumes() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount),times=min(100, 33*controllers_amount), is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -140,7 +140,7 @@
           {{ unlimited_volumes() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount),times=min(40, 13*controllers_amount), is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -155,7 +155,7 @@
         {{ volumes() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount),times=min(200, 67*controllers_amount), is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -177,7 +177,7 @@
           servers_per_tenant: 1
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount),times=min(10, 3*controllers_amount), is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -188,6 +188,6 @@
       context:
         {{ user_context(tenants_amount, users_amount, use_existing_users) }}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount),times=min(200, 67*controllers_amount), is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
