--- a/certification/openstack/scenario/nova.yaml
+++ b/certification/openstack/scenario/nova.yaml
@@ -12,7 +12,7 @@
           {{ unlimited_nova(keypairs=true) }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount), times=17*controllers_amount, is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -24,7 +24,7 @@
           {{ unlimited_nova(keypairs=true) }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount), times=67*controllers_amount, is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -36,7 +36,7 @@
           {{ unlimited_nova(keypairs=true) }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount), times=67*controllers_amount, is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -63,7 +63,7 @@
           {{ unlimited_nova() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount), times=17*controllers_amount, is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -81,7 +81,7 @@
           {{ unlimited_nova() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount), times=17*controllers_amount, is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -100,7 +100,7 @@
           {{ unlimited_nova() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 10*controllers_amount), times=333*controllers_amount, is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -122,7 +122,7 @@
           {{ unlimited_nova() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount), times=17*controllers_amount, is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -142,7 +142,7 @@
           {{ unlimited_nova() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 3*controllers_amount), times=17*controllers_amount, is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -161,7 +161,7 @@
           {{ unlimited_nova() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount), times=17*controllers_amount, is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -179,7 +179,7 @@
           {{ unlimited_nova() }}
         {% endcall %}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount), times=17*controllers_amount, is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
 
@@ -190,6 +190,6 @@
       context:
         {{ user_context(tenants_amount, users_amount, use_existing_users) }}
       runner:
-        {{ constant_runner() }}
+        {{ constant_runner(concurrency=min(50, 2*controllers_amount), times=17*controllers_amount, is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
