--- a/certification/openstack/scenario/authentication.yaml
+++ b/certification/openstack/scenario/authentication.yaml
@@ -3,6 +3,6 @@
       context:
         {{ user_context(tenants_amount, users_amount, use_existing_users) }}
       runner:
-        {{ rps_runner() }}
+        {{ rps_runner(rps=15*controllers_amount, times=20000*controllers_amount, is_smoke=smoke) }}
       sla:
         {{ no_failures_sla() }}
