Adds nova show and nova console output plugins
Nova provides show and console output functionalities for a server.
Currently, there isn't a benchmark provided by rally that does the above.

This commit adds plugins that call nova client's get and get console output
methods for a given server, allowing to use those for benchmarking.

This patch also includes functional and unit tests for newly added plugins.

Co-Authored-By: Michal Stolarczyk <zerodivisible@gmail.com>
Change-Id: Ica8642ca8463b1bcba936e3c1d392b4588a56dc2

--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -285,6 +285,44 @@
         failure_rate:
           max: 0
 
+  NovaServers.boot_and_show_server:
+    -
+      args:
+        image:
+          name: {{image_name}}
+        flavor:
+          name: "m1.tiny"
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+
+  NovaServers.boot_and_get_console_output:
+    -
+      args:
+        image:
+          name: {{image_name}}
+        flavor:
+          name: "m1.tiny"
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+
   NovaServers.resize_server:
     -
       args:
