Add batching for samples creation in context
Performance Ceilometer scenarios required a great amount of data, that means
that if something happens during samples are storing the test fails.
Batching improves it. Storing with batching has the same rate as if whole
sample list is stored, but choosing batch size not greater then 1% of all
samples makes it losing not critical for the test.

Change-Id: I96cfbdb6f0f8c20363b4be11cac488f6459f81e2

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -495,7 +495,7 @@
           counter_unit: "instance"
           counter_volume: 1.0
           resources_per_tenant: 3
-          samples_per_resource: 3
+          samples_per_resource: 10
           timestamp_interval: 60
           metadata_list:
             -  status: "active"
@@ -506,6 +506,7 @@
                name: "fake_resource_1"
                deleted: "False"
                created_at: "2015-09-10T06:55:12.000000"
+          batch_size: 5
       sla:
         failure_rate:
           max: 0
