--- a/samples/tasks/scenarios/ceilometer/list-samples.yaml
+++ b/samples/tasks/scenarios/ceilometer/list-samples.yaml
@@ -26,6 +26,7 @@
                 name: "fake_resource_1"
                 deleted: "False"
                 created_at: "2015-09-10T06:55:12.000000"
+           batch_size: 5
        args:
          limit: 50
          metadata_query:
