Add timestamps and metadata into creating samples
add timestamps with certain interval and resource_metadata into creating
samples in sample_generator

Change-Id: Id24487eb1cd86da065e2d21584b7dda8ebe112cb

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -480,6 +480,16 @@
           counter_volume: 1.0
           resources_per_tenant: 3
           samples_per_resource: 3
+          timestamp_interval: 60
+          metadata_list:
+            -  status: "active"
+               name: "fake_resource"
+               deleted: "False"
+               created_at: "2015-09-04T12:34:19.000000"
+            -  status: "not_active"
+               name: "fake_resource_1"
+               deleted: "False"
+               created_at: "2015-09-10T06:55:12.000000"
       sla:
         failure_rate:
           max: 0
