Extend list benchmarks for ceilometer
Existing benchmarks which process a list of resources and meters
are updated via new context and adding new configured query
parameters.

It allows to find a weak places in requesting ceilometer
data and extend count of scenarios which use a ceilometer.

Change-Id: Ifbb77915267f7e339ea7adbd9dae34ca59acb78d

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -438,13 +438,21 @@
   CeilometerMeters.list_meters:
     -
       runner:
-        type: "constant"
-        times: 10
-        concurrency: 10
+         type: constant
+         times: 10
+         concurrency: 2
       context:
-        users:
-          tenants: 1
-          users_per_tenant: 1
+         users:
+           tenants: 1
+           users_per_tenant: 1
+         ceilometer:
+           counter_name: "benchmark_meter"
+           counter_type: "gauge"
+           counter_unit: "%"
+           counter_volume: 100
+           resources_per_tenant: 1
+           samples_per_resource: 1
+           timestamp_interval: 1
       sla:
         failure_rate:
           max: 0
@@ -452,13 +460,21 @@
   CeilometerResource.list_resources:
     -
       runner:
-        type: "constant"
-        times: 10
-        concurrency: 10
+         type: constant
+         times: 10
+         concurrency: 2
       context:
-        users:
-          tenants: 1
-          users_per_tenant: 1
+         users:
+           tenants: 1
+           users_per_tenant: 1
+         ceilometer:
+           counter_name: "benchmark_meter"
+           counter_type: "gauge"
+           counter_unit: "%"
+           counter_volume: 100
+           resources_per_tenant: 1
+           samples_per_resource: 1
+           timestamp_interval: 1
       sla:
         failure_rate:
           max: 0
