--- a/samples/tasks/scenarios/ceilometer/all-list-meters.yaml
+++ b/samples/tasks/scenarios/ceilometer/all-list-meters.yaml
@@ -1,5 +1,5 @@
 ---
-    CeilometerMeters.list_matched_meters:
+    CeilometerMeters.list_meters:
      -
        runner:
          type: constant
@@ -28,8 +28,5 @@
                deleted: "true"
        args:
          limit: 50
-         filter_by_user_id: true
-         filter_by_project_id: true
-         filter_by_resource_id: true
          metadata_query:
            status: "terminated"
