Fix sahra-dsvm and sahara-mos jobs
The problem is sahara service type is different in MOS and dsvm.
Use api_versions context to set 'data_processing' for MOS and
'data-processig' for dsvm.

Also add missing service type 'data_processing'.

Change-Id: I4c31ec6d2dfa0b4098a0a9a647f052f935df4471

--- a/rally-jobs/rally-mos.yaml
+++ b/rally-jobs/rally-mos.yaml
@@ -1,4 +1,6 @@
+{%- set sahara_service_type = sahara_service_type|default("data_processing") %}
 ---
+{%- include "sahara.yaml" %}
 
   KeystoneBasic.create_user:
     -
@@ -105,40 +107,6 @@
 
   Authenticate.keystone:
     -
-      runner:
-        type: "constant"
-        times: 1
-        concurrency: 1
-      context:
-        users:
-          tenants: 1
-          users_per_tenant: 1
-      sla:
-        failure_rate:
-          max: 0
-
-  SaharaNodeGroupTemplates.create_and_list_node_group_templates:
-    -
-      args:
-        flavor:
-         name: "m1.small"
-      runner:
-        type: "constant"
-        times: 1
-        concurrency: 1
-      context:
-        users:
-          tenants: 1
-          users_per_tenant: 1
-      sla:
-        failure_rate:
-          max: 0
-
-  SaharaNodeGroupTemplates.create_delete_node_group_templates:
-    -
-      args:
-        flavor:
-         name: "m1.small"
       runner:
         type: "constant"
         times: 1
