--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -92,6 +92,10 @@
         users:
           tenants: 2
           users_per_tenant: 2
+        api_versions:
+          cinder:
+            version: 2
+            service_name: cinderv2
       sla:
         failure_rate:
           max: 0
