Add quotation marks
Update constant to "constant",so it will work well.

Change-Id: I62aa93892fc53e78da52b1d391aa2e58022b449a

--- a/certification/openstack/macro/macro.yaml
+++ b/certification/openstack/macro/macro.yaml
@@ -34,7 +34,7 @@
 {%- endmacro %}
 
 {%- macro constant_runner(concurrency=1, times=1, is_smoke=True) %}
-        type: constant
+        type: "constant"
   {%- if is_smoke %}
         concurrency: 1
         times: 1
