--- a/samples/tasks/scenarios/nova/boot-and-migrate.yaml
+++ b/samples/tasks/scenarios/nova/boot-and-migrate.yaml
@@ -7,7 +7,7 @@ NovaServers.boot_and_migrate_server:
     image:
       name: "^cirros.*uec$"
   runner:
-    type: constant
+    type: "constant"
     times: 10
     concurrency: 2
   context:
