--- a/samples/tasks/scenarios/nova/boot-server-attach-created-volume-and-live-migrate.yaml
+++ b/samples/tasks/scenarios/nova/boot-server-attach-created-volume-and-live-migrate.yaml
@@ -9,7 +9,7 @@ NovaServers.boot_server_attach_created_volume_and_live_migrate:
     size: 10
     block_migration: false
   runner:
-    type: constant
+    type: "constant"
     times: 5
     concurrency: 1
   context:
