--- a/samples/tasks/scenarios/nova/boot-server-from-volume-and-live-migrate.yaml
+++ b/samples/tasks/scenarios/nova/boot-server-from-volume-and-live-migrate.yaml
@@ -10,7 +10,7 @@ NovaServers.boot_server_from_volume_and_live_migrate:
     volume_size: 10
     force_delete: false
   runner:
-    type: constant
+    type: "constant"
     times: 10
     concurrency: 2
   context:
