[Sahara] Fix sahara gate
Update timeout for polling cluster state

Change-Id: Iee7e79d8292eca2d8a45bd0267cece89817a537c

--- a/rally-jobs/sahara-clusters.yaml
+++ b/rally-jobs/sahara-clusters.yaml
@@ -14,6 +14,7 @@
         type: "constant"
         times: 1
         concurrency: 1
+        timeout: 3000
       context:
         users:
           tenants: 1
