Extend samples list benchmarks for Ceilometer
Existing benchmarks for samples list query are updated via new
context and adding new configured query parameters.

It allow to find a weak places in requesting Ceilometer data and extend
count of scenarios which use in Ceilometer.

Change-Id: If2c780ab6cf9a3bdfb339e9b96b34d909ff17f28

--- a/samples/tasks/scenarios/ceilometer/list-matched-samples.yaml
+++ b/samples/tasks/scenarios/ceilometer/list-matched-samples.yaml
@@ -1,5 +1,5 @@
 ---
-    CeilometerSamples.list_samples:
+    CeilometerSamples.list_matched_samples:
      -
        runner:
          type: "constant"
@@ -28,5 +28,8 @@
                 created_at: "2015-09-10T06:55:12.000000"
        args:
          limit: 50
+         filter_by_user_id: true
+         filter_by_project_id: true
+         filter_by_resource_id: true
          metadata_query:
            status: "not_active"
