--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -17,47 +17,62 @@
 # The name of a logging configuration file. This file is appended to
 # any existing logging configuration files. For details about logging
 # configuration files, see the Python logging module documentation.
-# (string value)
+# Note that when logging configuration files are used then all logging
+# configuration is set in the configuration file and other logging
+# configuration options are ignored (for example, log_format). (string
+# value)
 # Deprecated group/name - [DEFAULT]/log_config
 #log_config_append = <None>
 
 # DEPRECATED. A logging.Formatter log message format string which may
 # use any of the available logging.LogRecord attributes. This option
 # is deprecated.  Please use logging_context_format_string and
-# logging_default_format_string instead. (string value)
+# logging_default_format_string instead. This option is ignored if
+# log_config_append is set. (string value)
 #log_format = <None>
 
 # Format string for %%(asctime)s in log records. Default: %(default)s
-# . (string value)
+# . This option is ignored if log_config_append is set. (string value)
 #log_date_format = %Y-%m-%d %H:%M:%S
 
 # (Optional) Name of log file to output to. If no default is set,
-# logging will go to stdout. (string value)
+# logging will go to stdout. This option is ignored if
+# log_config_append is set. (string value)
 # Deprecated group/name - [DEFAULT]/logfile
 #log_file = <None>
 
 # (Optional) The base directory used for relative --log-file paths.
-# (string value)
+# This option is ignored if log_config_append is set. (string value)
 # Deprecated group/name - [DEFAULT]/logdir
 #log_dir = <None>
 
+# (Optional) Uses logging handler designed to watch file system. When
+# log file is moved or removed this handler will open a new log file
+# with specified path instantaneously. It makes sense only if log-file
+# option is specified and Linux platform is used. This option is
+# ignored if log_config_append is set. (boolean value)
+#watch_log_file = false
+
 # Use syslog for logging. Existing syslog format is DEPRECATED and
-# will be changed later to honor RFC5424. (boolean value)
+# will be changed later to honor RFC5424. This option is ignored if
+# log_config_append is set. (boolean value)
 #use_syslog = false
 
 # (Optional) Enables or disables syslog rfc5424 format for logging. If
 # enabled, prefixes the MSG part of the syslog message with APP-NAME
 # (RFC5424). The format without the APP-NAME is deprecated in Kilo,
-# and will be removed in Mitaka, along with this option. (boolean
-# value)
+# and will be removed in Mitaka, along with this option. This option
+# is ignored if log_config_append is set. (boolean value)
 # This option is deprecated for removal.
 # Its value may be silently ignored in the future.
 #use_syslog_rfc_format = true
 
-# Syslog facility to receive log lines. (string value)
+# Syslog facility to receive log lines. This option is ignored if
+# log_config_append is set. (string value)
 #syslog_log_facility = LOG_USER
 
-# Log output to standard error. (boolean value)
+# Log output to standard error. This option is ignored if
+# log_config_append is set. (boolean value)
 #use_stderr = true
 
 # Format string to use for log messages with context. (string value)
@@ -74,7 +89,8 @@
 # value)
 #logging_exception_prefix = %(asctime)s.%(msecs)03d %(process)d ERROR %(name)s %(instance)s
 
-# List of logger=LEVEL pairs. (list value)
+# List of logger=LEVEL pairs. This option is ignored if
+# log_config_append is set. (list value)
 #default_log_levels = amqp=WARN,amqplib=WARN,boto=WARN,qpid=WARN,sqlalchemy=WARN,suds=INFO,oslo.messaging=INFO,iso8601=WARN,requests.packages.urllib3.connectionpool=WARN,urllib3.connectionpool=WARN,websocket=WARN,requests.packages.urllib3.util.retry=WARN,urllib3.util.retry=WARN,keystonemiddleware=WARN,routes.middleware=WARN,stevedore=WARN,taskflow=WARN
 
 # Enables or disables publication of error events. (boolean value)
@@ -87,6 +103,10 @@
 # The format for an instance UUID that is passed with the log message.
 # (string value)
 #instance_uuid_format = "[instance: %(uuid)s] "
+
+# Format string for user_identity field of the
+# logging_context_format_string (string value)
+#logging_user_identity_format = %(user)s %(tenant)s %(domain)s %(user_domain)s %(project_domain)s
 
 # Enables or disables fatal status of deprecations. (boolean value)
 #fatal_deprecations = false
@@ -508,6 +528,9 @@
 # Job Execution status polling interval in seconds (integer value)
 # Deprecated group/name - [DEFAULT]/job_check_interval
 #sahara_job_check_interval = 5
+
+# Amount of workers one proxy should serve to. (integer value)
+#sahara_workers_per_proxy = 20
 
 # Interval between checks when waiting for a VM to become pingable
 # (floating point value)
