Add Designate API V2 support - part 1
This commit adds basic support for Rally > Designate V2 with the RecordSet and
Zone resources. More functionality will be added later.

Change-Id: I42456a404a8c8733103228f3b1e83215da9ae641

--- a/rally-jobs/rally-designate.yaml
+++ b/rally-jobs/rally-designate.yaml
@@ -115,3 +115,44 @@
         failure_rate:
           max: 0
 
+  DesignateBasic.create_and_list_zones:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 1
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
+  DesignateBasic.create_and_delete_zone:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
+  DesignateBasic.list_zones:
+    -
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
