--- a/rally-jobs/rally-designate.yaml
+++ b/rally-jobs/rally-designate.yaml
@@ -153,6 +153,8 @@
         users:
           tenants: 2
           users_per_tenant: 2
+        zones:
+          zones_per_tenant: 10
       sla:
         failure_rate:
           max: 0
