--- a/rally-jobs/rally-designate.yaml
+++ b/rally-jobs/rally-designate.yaml
@@ -134,7 +134,7 @@
       runner:
         type: "constant"
         times: 10
-        concurrency: 1
+        concurrency: 2
       context:
         users:
           tenants: 2
@@ -153,6 +153,38 @@
         users:
           tenants: 2
           users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
+  DesignateBasic.create_and_list_recordsets:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+        zones:
+          zones_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
+
+  DesignateBasic.create_and_delete_recordsets:
+    -
+      runner:
+        type: "constant"
+        times: 10
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+        zones:
+          zones_per_tenant: 1
       sla:
         failure_rate:
           max: 0
