[CI] Remove hardcoded hadoop version from mos task
Different versions of MOS works with different hadoop versions
Also add hadoop_version to nodegroup scenario.


Change-Id: Iab11b3cf9c674b4e258901c57b796a73348c0d63

--- a/rally-jobs/sahara-clusters.yaml
+++ b/rally-jobs/sahara-clusters.yaml
@@ -8,7 +8,7 @@
          name: "m1.small"
         workers_count: 1
         plugin_name: "vanilla"
-        hadoop_version: "2.7.1"
+        hadoop_version: "{{sahara_hadoop_version}}"
         auto_security_group: True
       runner:
         type: "constant"
@@ -23,7 +23,7 @@
           image_url: "http://sahara-files.mirantis.com/images/upstream/liberty/sahara-liberty-vanilla-2.7.1-ubuntu-14.04.qcow2"
           username: "ubuntu"
           plugin_name: "vanilla"
-          hadoop_version: "2.7.1"
+          hadoop_version: "{{sahara_hadoop_version}}"
         api_versions:
           sahara:
             service_type: {{sahara_service_type}}
