[Verify] Set run_validation to True to enable the corresponding tests
Change-Id: I90c2be13d702cc3eb94e7530651d554b1fbc9eac

--- a/rally/verification/tempest/config.ini
+++ b/rally/verification/tempest/config.ini
@@ -52,7 +52,7 @@ large_ops_number = 2
 [service_available]
 
 [validation]
-run_validation = False
+run_validation = True
 
 [volume-feature-enabled]
 bootable = True
