--- a/samples/tasks/scenarios/cinder/create-and-attach-volume.yaml
+++ b/samples/tasks/scenarios/cinder/create-and-attach-volume.yaml
@@ -1,4 +1,5 @@
 {% set flavor_name = flavor_name or "m1.tiny" %}
+{% set availability_zone = availability_zone or "nova" %}
 ---
   CinderVolumes.create_and_attach_volume:
     -
@@ -8,6 +9,8 @@
             name: "^cirros.*uec$"
           flavor:
             name: "{{flavor_name}}"
+          create_volume_params:
+            availability_zone: "{{availability_zone}}"
       runner:
         type: "constant"
         times: 5
@@ -25,6 +28,8 @@
             name: "{{flavor_name}}"
         image:
             name: "^cirros.*uec$"
+        create_volume_params:
+            availability_zone: "{{availability_zone}}"
       runner:
         type: "constant"
         times: 5
