Make disk_format configurable
This patch makes disk_format configurable in
rally/verification/tempest/config.py

Change-Id: I9825c407192946dce9f59924745b0c6d7f688112
Closes-Bug: #1522693

--- a/etc/rally/rally.conf.sample
+++ b/etc/rally/rally.conf.sample
@@ -655,6 +655,12 @@
 # CirrOS image URL (string value)
 #cirros_img_url = http://download.cirros-cloud.net/0.3.4/cirros-0.3.4-x86_64-disk.img
 
+# Image disk format (string value)
+#disk_format = qcow2
+
+# Image container formate (string value)
+#container_format = bare
+
 
 [role]
 
