--- a/samples/tasks/scenarios/sahara/jobs/java_action_job.yaml
+++ b/samples/tasks/scenarios/sahara/jobs/java_action_job.yaml
@@ -18,19 +18,19 @@
           tenants: 1
           users_per_tenant: 1
         sahara_image:
-          image_url: "http://sahara-files.mirantis.com/sahara-icehouse-vanilla-1.2.1-ubuntu-13.10.qcow2"
+          image_url: "http://sahara-files.mirantis.com/mos70/sahara-kilo-vanilla-2.6.0-ubuntu-14.04.qcow2"
           username: "ubuntu"
           plugin_name: "vanilla"
-          hadoop_version: "1.2.1"
+          hadoop_version: "2.6.0"
         sahara_job_binaries:
           libs:
             -
               name: "examples.jar"
-              download_url: "http://repo1.maven.org/maven2/org/apache/hadoop/hadoop-examples/1.2.1/hadoop-examples-1.2.1.jar"
+              download_url: "http://repo1.maven.org/maven2/org/apache/hadoop/hadoop-mapreduce-examples/2.6.0/hadoop-mapreduce-examples-2.6.0.jar"
         sahara_cluster:
           flavor_id: "2"
           workers_count: 3
           plugin_name: "vanilla"
-          hadoop_version: "1.2.1"
+          hadoop_version: "2.6.0"
           auto_security_group: True
         network: {}
