--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -344,6 +344,26 @@
       sla:
         failure_rate:
           max: 0
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: {{image_name}}
+        to_flavor:
+            name: "m1.small"
+        confirm: false
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 1
+      sla:
+        failure_rate:
+          max: 0
 
   NovaServers.boot_server_attach_created_volume_and_resize:
     -
