[Sahara] Improved flavor paramter for clusters
The flavors for Master and Worker node groups is now configured
separatelly in both scenarios and context.
This allows setting up better balanced clusters when a Master node
may require a bigger flavor than workers. This is almost always a
requirement for plugins like CDH or HDP.

Change-Id: I78f4145fecb327dae06ead02bd1aa85e2ba2b79a

--- a/rally-jobs/sahara-clusters.yaml
+++ b/rally-jobs/sahara-clusters.yaml
@@ -4,7 +4,9 @@
   SaharaClusters.create_and_delete_cluster:
     -
       args:
-        flavor:
+        master_flavor:
+         name: "m1.small"
+        worker_flavor:
          name: "m1.small"
         workers_count: 1
         plugin_name: "vanilla"
