--- a/samples/tasks/scenarios/sahara/jobs/java_action_job.yaml
+++ b/samples/tasks/scenarios/sahara/jobs/java_action_job.yaml
@@ -28,7 +28,8 @@
               name: "examples.jar"
               download_url: "http://repo1.maven.org/maven2/org/apache/hadoop/hadoop-mapreduce-examples/2.6.0/hadoop-mapreduce-examples-2.6.0.jar"
         sahara_cluster:
-          flavor_id: "2"
+          master_flavor_id: "4"
+          worker_flavor_id: "3"
           workers_count: 3
           plugin_name: "vanilla"
           hadoop_version: "2.6.0"
